--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,15 @@
+#container {
+  width: 960px;
+  margin: 0 auto;
+}
+
+div {
+  text-align: center;
+}
+
 table, #reset {
   margin: 0 auto;
   display: block;
-}
-
-h1 {
-  text-align: center;
 }
 
 td {
